Fix build size chip text wrapping (#28)

--- a/store/static/css/details.css
+++ b/store/static/css/details.css
@@ -165,6 +165,9 @@ body, html {
 .buildDetails {
   margin-right: 5px;
 }
+.buildSize {
+  white-space: nowrap;
+}
 .buildDownloadBtn {
   background-color: #ff9800 !important;
   margin-top: 10px;
